<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_bg_white"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".ui.activity.DebugAutoScanActivity">


    <com.dawn.java.ui.widget.TopToolbar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mainTitle="@string/menu_item_debug_auto_scan"
        app:srcLeftIcon="@drawable/icon_return"
        app:srcRightIcon="@drawable/icon_plus" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/debug_add_test_item" />


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/debug_cur_scan_result" />

        <TextView
            android:id="@+id/tv_scan_result_cur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_text_scan_result"
            android:minHeight="60dp"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/cb_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/common_camera_sound_on" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/debug_scan_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            app:srcCompat="@drawable/ic_media_play" />
    </LinearLayout>

</LinearLayout>