<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.VersionShowActivity"
    android:orientation="vertical">

    <com.dawn.java.ui.widget.TopToolbar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mainTitle="@string/menu_item_illumination_setting"
        app:srcLeftIcon="@drawable/icon_return" />

    <Switch
        android:id="@+id/illumination_enable"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/menu_item_illumination_enable"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:paddingLeft="20dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="20dp"
        android:focusableInTouchMode="true"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="期望亮度(1~255)"
            android:textColor="@color/black"
            android:textSize="17sp" />
        <EditText
            android:id="@+id/et_exp_brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            android:inputType="number" />
    </LinearLayout>
    <Switch
        android:id="@+id/effect_enable"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/menu_item_effect_enable"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="曝光值"
            android:textColor="@color/black"
            android:textSize="17sp" />
        <Spinner
            android:id="@+id/sp_exposure"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="增益值"
            android:textColor="@color/black"
            android:textSize="17sp" />
        <Spinner
            android:id="@+id/sp_gain"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:background="@drawable/selector_btn_blue"
        android:text="保存设置"/>
    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:background="@drawable/selector_btn_blue"
        android:text="恢复设置"/>
</LinearLayout>